# ar-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
notebooks/: backtesting_debug.ipynb  features_debug.ipynb  generate_signals.ipynb
src/application/: container.py  lifecycle.py  module_registry.py
src/commons/enums/: broker_enums.py  signal_enums.py
src/domain/etl/: features_module.py
src/domain/etl/analyzers/: breakout_analyzer.py  fair_value_gap_analyzer.py  trend_analyzer.py  volume_spike_analyzer.py
src/domain/etl/calculators/: basic_indicators_calculator.py
src/domain/etl/dtos/: enriched_data.py  extracted_data.py
src/domain/etl/services/: enricher_service.py  extractor_service.py  pipeline_service.py
src/domain/health/: controller.py  module.py  service.py
src/domain/portfolio/: portfolio_module.py  portfolio_service.py  test_portfolio_service.py
src/domain/portfolio/dtos/: portfolio_dto.py
src/domain/portfolio/jobs/: portfolio_weigths_job.py
src/domain/signals/: aggregator.py  signals_bus.py  signals_module.py  signals_service.py
src/domain/strategies/: strategies_module.py
src/domain/strategies/impl/: base.py  (+10 more)
src/domain/trading/: test_trading_service.py  trading_module.py  trading_service.py  trading_stream.py
src/infrastructure/broker/: broker_base.py  broker_fake.py  broker_iol.py  test_iol_client.py
src/infrastructure/config/: settings.py
src/infrastructure/data/: ohlcv_base.py  yfinance.py
src/infrastructure/database/: client.py
src/infrastructure/scheduler/: cron_expression_enum.py  scheduler.py
(+35 files in other folders)
