[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "Trading bot AR - FastAPI"
authors = ["maurofabricioperna@gmail.com"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
httpx = "^0.27.0"
pydantic = "^2.8.0"
sqlalchemy = "^2.0.0"
psycopg = {version="^3.1.0", extras=["binary"]}
alembic = "^1.13.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
redis = "^5.0.1"
dependency-injector = "4.46.0"
pydantic-settings = "2.9.1"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
email-validator = "^2.3.0"
yfinance = "^0.2.66"
matplotlib = "^3.10.7"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
ppi-client = "^1.2.4"
torch = "^2.9.0"
scikit-learn = "^1.7.2"
pytest-asyncio = "^1.3.0"
pandas-ta = "0.4.67b0"
backtesting = "0.6.4"
statsmodels = "0.14.4"
rx = "^3.2.0"
pyportfolioopt = "^1.5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
  "integration: tests de integración que pegan a servicios externos"
]
